--- a/Activities/Week 1-HTML, CSS, Git/Basic-Portfolio/assets/css/style.css
+++ b/Activities/Week 1-HTML, CSS, Git/Basic-Portfolio/assets/css/style.css
@@ -1,156 +1,203 @@
+/* MY COLOURS
+#EB7E65 -- Coral
+#F9BD95 -- Peach
+#F8DCB7 -- Pale Yellow
+#A5B996 -- Olive
+#A9BBB8 -- Grey Blue 
+#D4E3DE -- Pale Grey Blue */
+
+/* PAGE STYLE */
 .wrapper {
-    width: 960px;
-    margin: 0 auto;
-} 
+  width: 960px;
+  margin: 0 auto;
+}
 
 body {
-    background-image: url(../images/dust_scratches.png);
+  background-image: url(../images/dust_scratches.png);
 }
 
 /* HEADER */
 
-.menu {
-    width: auto;
-    background-color: #ffffff;
-    overflow: hidden;
-    border-color: #cccccc; 
-    border-style: solid;
-    border-bottom-width: 2px;
-    margin-bottom: 30px;
+header {
+  margin: 0 auto;
+  padding: 0 475px;
+  background-color: #A9BBB8;
+  margin-bottom: 25px;
+
 }
 
-.menu h1 {
-    float: left;
-    background-color: #4aaaa5;
-    color: white;
-    padding: 25px;
+header::after {
+  content: '';
+  display: table;
+  clear: both;
 }
 
-.menu a, li {
-    display: inline;
-    float: right;
-    color: #999999;
-    vertical-align: middle;
-    text-align: center;
-    padding: 15px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+.Logo {
+  float: left;
+  padding: 10px 0;
 }
 
+nav {
+  float: right;
+}
 
-/* .menu a:hover {
-    background-color: #4aaaa5a8;
-    color: black;
-} */
+nav ul {
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+}
 
-.about, .portfolio, .Contact {
-    margin: 0 auto;
-    padding: 20px;
-    padding-bottom: 50px;
-    background-color: #ffffff;
-    border: 2px solid #dddddd;
-    line-height: 1.7em;
+nav li {
+  display: inline-block;
+  margin-left: 50px;
+  padding-top: 25px;
+}
+
+nav a {
+  color: black;
+  text-decoration: none;
+  text-transform: capitalize;
+}
+
+nav a:hover {
+  color: coral;
+}
+
+.hvr-shadow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow;
+  transition-property: box-shadow;
+}
+.hvr-shadow:hover, .hvr-shadow:focus, .hvr-shadow:active {
+  box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+}
+
+.about,
+.portfolio,
+.Contact {
+  margin: auto;
+  padding: 20px;
+  padding-bottom: 50px;
+  background-color: #D4E3DE;
+  border: 2px solid #D4E3DE;
+  border-radius: 10px;
+  line-height: 1.7em;
 }
 
 /* Main Typography */
 
-h1, h2 {
-    font-family: 'Georgia', Times, Times New Roman, serif;
-    font-weight: 600;
-    color: #4aaaa5;
+h1,
+h2 {
+  font-family: 'Sanchez', serif;
+  font-weight: 600;
+  color: rgb(64, 70, 68);
 }
 
 h1 {
-    font-size: 30px;
+  font-size: 30px;
 }
 
 h2 {
-    font-size: 26px;
-    padding: 17px 0;
+  font-size: 26px;
+  padding: 17px 0;
 }
 
 p {
-    font-size: 16px;
-    color: #777777;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 16px;
+  color: #777777;
+  font-family: 'Poppins', sans-serif;
 }
 
 a {
-    color: pink;
+  color: #A5B996;
+  font-family: 'Poppins', sans-serif;
 }
 
-ul {}
+ul {
+}
 
-li {}
+li {
+}
 
 hr {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 /* Image */
 
-img {
-    width: 150px;
-    float: left;
-    padding: 0 20px 20px 0;
-    justify-content: left;
+.about img {
+  width: 200px;
+  float: left;
+  padding: 0 20px 20px 0;
+  justify-content: left;
+  border-radius: 50%;
+}
+
+.portfolioGrid {
+  columns: 2;
 }
 
 .imgPortfolio {
-    position: relative; 
-    width: 100%;
+  position: relative;
+  width: 100%;
 }
 
 .textOverlay {
-    position: relative; 
-    width: 100%;
-    background-color: #4aaaa5;
-    width: 200px;
-    color: white;
-    text-align: center;
+  position: relative;
+  width: 450px;
+  background-color: #4aaaa5;
+  color: white;
+  text-align: center;
 }
+
 
 /* FORM */
 input {
-    width: 100%;
-    padding: 10px 15px;
-    margin: 5px 0;
-    box-sizing: border-box;
+  width: 100%;
+  padding: 10px 15px;
+  margin: 5px 0;
+  box-sizing: border-box;
 }
 
 label {
-    font-size: 16px;
-    color: #777777;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 16px;
+  color: #777777;
+  font-family: 'Poppins', sans-serif;
 }
 
 #message {
-    height: 200px;
+  height: 200px;
 }
 
 button {
-    margin-top: 10px;
-    background-color: #4aaaa5;
-    color: white;
-    padding: 5px 10px;
+  margin-top: 10px;
+  background-color: #4aaaa5;
+  border-radius: 10px;
+  padding: 10px 30px;
+  color: white;
+  font-family: 'Poppins', sans-serif;
 }
 
-
-    /* FOOTER */
+/* FOOTER */
 
 .footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: #666666;
-    border-top: 5px solid #4aaaa5;
-    padding: 25px 0;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #666666;
+  border-top: 5px solid #A5B996;
+  padding: 25px 0;
 }
 
 .footer p {
-    color: white;
-    font-size: 14px;
-    text-align: center;
+  color: white;
+  font-size: 14px;
+  text-align: center;
 }
