--- a/Activities/Week 2-CSS, Bootstrap/18-StudentMedia/Unsolved/css/style.css
+++ b/Activities/Week 2-CSS, Bootstrap/18-StudentMedia/Unsolved/css/style.css
@@ -64,6 +64,11 @@ body {
     background-color: #333;
   }
 
+  section {
+    margin: 25px 25px;
+    padding: 10px;
+  }
+
   /* The wrapper's width will be 600px */
   .wrapper {
     width: 600px;
