--- a/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Bootstrap-Portfolio/assets/css/style.css
+++ b/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Bootstrap-Portfolio/assets/css/style.css
@@ -8,7 +8,7 @@
 
 /* TYPOGRAPHY */
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 /* SIZING */
@@ -34,20 +34,22 @@ nav a:hover {
 .bgimage {
   width: 100%;
   height: 500px;
-  background: url("../images/Hayley-Buns.png");
+  background: url('../images/Hayley-Buns.png');
   background-repeat: no-repeat;
   background-position: bottom;
   background-size: cover;
   background-attachment: fixed;
 }
 .bgimage h1 {
-  color: black;
+  color: white;
+  text-shadow: 3px 3px 5px black;
   font-size: 50px;
   margin-top: 175px;
 }
 
 .bgimage h3 {
-  color: black;
+  color: white;
+  text-shadow: 3px 3px 4px black;
   font-size: 35px;
 }
 
@@ -68,7 +70,8 @@ nav a:hover {
 }
 
 .aboutHayley {
-  padding: 50px 0px;
+  padding-top: 50px;
+  padding-bottom: 100px;
   background-color: #f9bd95;
   text-align: center;
 }
@@ -88,11 +91,15 @@ nav a:hover {
 
 .features {
   /* position: absolute; */
-  background-color: #d4e3de;
+  background-color: #eeeeee;
+  box-shadow: 3px 5px 15px rgb(97, 97, 97);
   margin-left: 15%;
   margin-right: 15%;
-  padding-top: -5px;
-  /* z-index: 2; */
+  padding-top: 105px;
+  padding-bottom: 105px;
+  border-radius: 15px;
+  margin-top: -55px;
+  margin-bottom: 5%;
 }
 
 .feature-card {
@@ -103,8 +110,21 @@ nav a:hover {
   widows: 200px;
 }
 
+.features h2 {
+  font-size: 1.3rem;
+  padding-bottom: 5px;
+}
+
 .features h5 {
   font-weight: 500;
+}
+
+/* PORTFOLIO */
+
+.card {
+  margin-top: 25px;
+
+  width: 300px;
 }
 
 /* FORM */
