--- a/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Bootstrap-Portfolio/assets/css/style.css
+++ b/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Bootstrap-Portfolio/assets/css/style.css
@@ -120,14 +120,27 @@ nav a:hover {
 }
 
 /* PORTFOLIO */
+.portfolio {
+  margin: 30px 0px;
+}
+
+.portfolio,
+h1,
+p {
+  text-align: center;
+}
 
 .card {
   margin-top: 25px;
-
-  width: 300px;
+  width: auto;
+  box-shadow: 3px 5px 15px rgb(97, 97, 97);
 }
 
 /* FORM */
+
+.contactForm {
+  margin: 35px auto;
+}
 
 label {
   padding-top: 10px;
