--- a/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Bootstrap-Portfolio/assets/css/style.css
+++ b/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Bootstrap-Portfolio/assets/css/style.css
@@ -163,6 +163,10 @@ label {
 }
 
 /* FOOTER */
+#footerSC col-sm col-xs {
+  display: inline;
+}
+
 .footer {
   background-color: #333;
   color: white;
