--- a/Activities/Week 14-Handlebars/06-HandlebarsAnimals/Unsolved/views/dog.handlebars
+++ b/Activities/Week 14-Handlebars/06-HandlebarsAnimals/Unsolved/views/dog.handlebars
@@ -1,1 +1,13 @@
 <!-- 4. Output the animalType string, pet boolean, and fierceness number to the page -->
+
+<style media="screen">
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+  }
+</style>
+
+
+
+<h2>{{animalType}}</h2>
+<p>This animal has a rating of {{fierceness}} fierceness</p>
