--- a/Activities/Week 14-Handlebars/06-HandlebarsAnimals/Unsolved/views/index.handlebars
+++ b/Activities/Week 14-Handlebars/06-HandlebarsAnimals/Unsolved/views/index.handlebars
@@ -1,1 +1,14 @@
 <!-- 5. Output the animalType string, pet boolean, and fierceness number to the page for all the pets. -->
+
+<style media="screen">
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+  }
+</style>
+
+{{#each animals}}
+<h2>{{animalType}}</h2>
+<p>This animal has a rating of {{fierceness}} fierceness</p>
+<p>Is a pey? {{pet}}</p>
+{{/each}}
