--- a/Activities/Week 14-Handlebars/11-QuotesApp/Unsolved/views/index.handlebars
+++ b/Activities/Week 14-Handlebars/11-QuotesApp/Unsolved/views/index.handlebars
@@ -19,7 +19,7 @@
 
 <h2>Add a Quote</h2>
 
-<form class="create-form" action="../public/assets/js/quptes.js" method="POST">
+<form class="create-form">
 
   <div class="form-group">
     <label for="auth">Author:</label>
